2009-12-01  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Reworked the "Meeting" category for the
	English and French locale.

2009-11-26  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Added src/patches/468846_oracle.diff - which
	was missing in previous commits
	* src/calendar/providers/storage/calStorageCalendar.js
	Modified initDB() to create indexes as mentioned in
	https://bugzilla.mozilla.org/show_bug.cgi?id=529326
	This speeds up initial loading of cached CalDAV
	calendars and subsequent TB starts.
	* Bumped version number to 0.9.8pre1

2009-10-27  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Added checks in case start/end date isn't defined so
	we do not throw worthless exceptions and stop.

2009-10-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js
	(imipCalDAVComponentACLEntryObserver.observe): use
	"this.componentURL" to retrieve the base filename of the component
	rather than the full url.

2009-08-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Added support for iTIP delegation.

2009-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/messenger-overlay-sidebar.xul: we
	enable the "export" menu items from the File menu to appear in
	"task" mode.

	* src/calendar/base/content/calendar-common-sets.js: since
	"currentView()" only pertains to calendar views, the
	"calendar_export_selection_command" now checks whether the current
	mode is not actually the "task" mode, in which case the view taken
	into account is the "calendar-task-tree" element.

	* src/calendar/base/content/calendar-task-tree.xml: added new
	"getSelectedItems" method that returns a list of the parent items
	whose children are currently selected in the view. This method
	matches the ones from the "calendar" views in order to facilitate
	the export functions.

	* src/calendar/lightning/content/messenger-overlay-sidebar.xul,
	src/calendar/base/content/calendar-common-sets.js: added files for